--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,11 @@
     <title>AdminPro</title>
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Google Sign-in -->
+    <meta name="google-signin-client_id" content="633778606543-vtir631mmple3p6t9vnm7nersm6730um.apps.googleusercontent.com">
+    <script src="https://apis.google.com/js/platform.js"></script>
+
+
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 
     <!-- Favicon icon -->
